<resources>
    <string name="app_name">機材管理</string>
    <!-- Strings used for fragments for navigation -->

    <!-- メニュー -->
    <string name="menu_equipment_list">機材一覧</string>
    <string name="menu_maker_list">メーカー一覧</string>
    <string name="menu_new_equipment">新規登録</string>
    <string name="menu_user_list">使用者一覧</string>
    <string name="menu_category_list">カテゴリー一覧</string>

    <!-- メーカー -->
    <string name="maker_create">メーカー 新規登録</string>
    <string name="maker_update">メーカー 更新</string>
    <string name="maker_name_label">メーカー名</string>
    <string name="maker">メーカー</string>

    <!-- カテゴリー -->
    <string name="category_create">カテゴリー 新規登録</string>
    <string name="category_name_label">カテゴリー名</string>
    <string name="category">カテゴリー</string>

    <!-- 使用者 -->
    <string name="user_create">使用者 新規登録</string>
    <string name="user_update">使用者 更新</string>
    <string name="email_label">メールアドレス</string>
    <string name="last_name_label">名前（姓）</string>
    <string name="first_name_label">名前（名）</string>
    <string name="user_name">%1s %2s</string>
    <string name="user">使用者</string>

    <!-- 機材 -->
    <string name="equipment_create">機材 新規登録</string>
    <string name="equipment_update">機材 更新</string>
    <string name="management_number_label">管理番号</string>
    <string name="model_name_label">モデル名</string>
    <string name="equipment_type_label">種別</string>
    <string name="user_label">使用者</string>
    <string name="usage_label">用途</string>
    <string name="note_label">メモ・備考</string>
    <string name="purchase_date_label">購入日</string>
    <string name="equipment_management_number_string">%1s-%2s</string>
    <string name="host_name">ホスト名</string>
    <string name="mac_address">MACアドレス</string>
    <string name="os">OS</string>

    <string name="create">新規登録</string>
    <string name="save">保存</string>
    <string name="delete">削除</string>
    <string name="delete_2">×</string>
    <string name="update">更新</string>
    <string name="select">選択</string>
    <string name="search">検索</string>
    <string name="start_camera">カメラ起動</string>


    <string name="with_hyphen">%1s-</string>
    <string name="relation_equipment">関連機器</string>
</resources>
