<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EquipmentActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="match_parent">

        <!-- カテゴリー -->
        <TableRow
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_height="0dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/category" />

            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/category_name_label"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>
        </TableRow>

        <!-- 管理番号 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/management_number_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/management_number_label" />
            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/management_number"
                    android:textSize="18sp"
                    android:layout_height="wrap_content"
                     android:layout_width="wrap_content" />
            </LinearLayout>

        </TableRow>

        <!-- メーカー -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/maker_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:labelFor="@id/maker_spinner"
                android:text="@string/maker_name_label" />

            <Spinner
                android:id="@+id/maker_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />
        </TableRow>

        <!-- モデル名 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/model_name_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:labelFor="@id/model_name"
                android:text="@string/model_name_label" />

            <EditText
                android:id="@+id/model_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:autofillHints=""
                android:ems="10"
                android:inputType="text" />
        </TableRow>

        <!-- 種別 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/equipment_type_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:labelFor="@id/equipment_type"
                android:text="@string/equipment_type_label" />

            <EditText
                android:id="@+id/equipment_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:autofillHints=""
                android:inputType="text" />
        </TableRow>

        <!-- MACアドレス -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:labelFor="@id/mac_address"
                android:text="@string/mac_address" />

            <EditText
                android:id="@+id/mac_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:autofillHints="00-00-00-00-00-00"
                android:digits="0123456789abcdefABCDEF-"
                android:maxLength="17"
                android:inputType="text" />
        </TableRow>

        <!-- ホスト名 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:labelFor="@id/host_name"
                android:text="@string/host_name" />

            <EditText
                android:id="@+id/host_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:autofillHints=""
                android:inputType="text" />
        </TableRow>

        <!-- 使用者 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/user_id_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:labelFor="@id/user_spinner"
                android:text="@string/user_label" />

            <Spinner
                android:id="@+id/user_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5" />
        </TableRow>

        <!-- 用途 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/usage_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:labelFor="@id/usage"
                android:text="@string/usage_label" />

            <EditText
                android:id="@+id/usage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:autofillHints=""
                android:inputType="text" />
        </TableRow>

        <!-- メモ・備考 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/note_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:labelFor="@id/note"
                android:text="@string/note_label" />

            <EditText
                android:id="@+id/note"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:autofillHints=""
                android:inputType="text" />
        </TableRow>

        <!-- 購入日 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/purchase_date_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:labelFor="@id/purchase_date"
                android:text="@string/purchase_date_label" />

                <EditText
                    android:id="@+id/purchase_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:inputType="text"
                    android:autofillHints=""
                    />
        </TableRow>

        <!-- 関連機器 -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:labelFor="@id/purchase_date"
                android:text="@string/relation_equipment" />
            <TextView
                android:id="@+id/selected_relationships"
                android:layout_marginStart="10dp"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                />
            <Button
                android:id="@+id/select_relation_equipment_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select"
                />
        </TableRow>

        <!-- OS -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:labelFor="@id/purchase_date"
                android:text="@string/os" />

            <EditText
                android:id="@+id/os"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:inputType="text"
                android:autofillHints=""
                />
        </TableRow>

        <!-- 登録ボタン -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">

            <Button
                android:id="@+id/equipment_create_button"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_gravity="end"
                android:text="@string/save" />

        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
